--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Alben Bustamante</title>
+    <title>Alben Bustamante | Software Developer</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <meta name="robots" content="index, follow" />
+    <meta name="theme-color" content="#020618" />
+    <meta
+      name="description"
+      content="Portfolio de Alben Bustamante con 2 años de experiencia como desarrollador de software"
+    />
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://alben.dev" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="" />
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="alben.dev" />
+    <meta property="twitter:url" content="https://alben.dev" />
+    <meta name="twitter:image" content="" />
+
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+    <link rel="canonical" href="https://alben.dev" />
+    <link rel="icon" type="image/png" href="favicon.png" />
   </head>
   <body>
+    <!--a href="https://www.flaticon.com/free-icons/software-development" title="software development icons">Software development icons created by Freepik - Flaticon</a-->
     <app-root></app-root>
   </body>
 </html>
