--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Alben Bustamante | Software Developer</title>
+    <title>Alben Bustamante</title>
     <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="index, follow" />
     <meta name="theme-color" content="#020618" />
     <meta
       name="description"
-      content="Portfolio de Alben Bustamante con 2 años de experiencia como desarrollador de software"
+      content="Portfolio de Alben Bustamante con 2 años de experiencia como desarrollador de software."
     />
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://alben.dev" />
